2016-09-25

  Released 0.1
  Initial check-in of gdeltPyR


2016-10-23
  Working on 0.1 release, basic functionality all there

2016-10-25
  Changed MANIFEST.in file; cleaned up egg.info

2016-10-30
  Edited the warning strings and aligned some code with PEP8

2016-10-31
  Added human readable CAMEO Codes column

2016-10-31
  Bug fix; file not loading or downloading on install

2016-11-03
  Added ability to pull GKG 1.0 data

2016-11-06
  GDELT changed url structure for 2.0 events database.

2016-11-07
  Typo on line 290 of base.py; removed and fixed bug.

2017-05-23
  Updated to 0.1.10
  Added geodataframe output
  Started adding unittests (datefuncs first), added docstrings for functions, and PEP8 adherence.
  Fixed datecheck error on current day;

2017-05-27
  Removed datetime parsing
  Added unittests for events before 2013, gkg v1 before apr 1, etc.

